--- a/index.html
+++ b/index.html
@@ -45,63 +45,63 @@
             <h2>Carlos Correia de A. Neto</h2>
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Desenvolvedor FullStack</p>
-            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Recife - PE, Brasil</p>
-            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>carloscaneto00@gmail.com</p>
-            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>(81) 9 9303-7373</p>
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large .w3-text-yellow"></i>Desenvolvedor FullStack</p>
+            <p><i class="fa fa-home fa-fw w3-margin-right w3-large .w3-text-yellow"></i>Recife - PE, Brasil</p>
+            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large .w3-text-yellow"></i>carloscaneto00@gmail.com</p>
+            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large .w3-text-yellow"></i>(81) 9 9303-7373</p>
             <hr>
 
             <p class="w3-large">
-              <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-indigo"></i>Habilidades</b>
+              <b><i class="fa fa-asterisk fa-fw w3-margin-right .w3-text-yellow"></i>Habilidades</b>
             </p>
             <p>Angular</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">80%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-yellow" style="width:85%">85%</div>
             </div>
             <p>Java</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:75%">75%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-yellow" style="width:75%">75%</div>
             </div>
             <p>Java Script</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">90%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-yellow" style="width:90%">90%</div>
             </div>
             <p>Spring Framework</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:40%">40%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-yellow" style="width:40%">40%</div>
             </div>
             <p>Lquid - Shopify</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:50%">50%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-yellow" style="width:50%">50%</div>
             </div>
             <p>Zapier</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:60%">60%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-yellow" style="width:60%">60%</div>
             </div>
             <p>MySQL</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:50%">50%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-yellow" style="width:50%">50%</div>
             </div>
             <br>
 
             <p class="w3-large w3-text-theme">
-              <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-indigo"></i>Idiomas</b>
+              <b><i class="fa fa-globe fa-fw w3-margin-right .w3-text-yellow"></i>Idiomas</b>
             </p>
             <p>Português</p>
             <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-indigo" style="height:24px;width:100%"></div>
+              <div class="w3-round-xlarge w3-yellow" style="height:24px;width:100%"></div>
             </div>
             <p>Inglês</p>
             <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-indigo" style="height:24px;width:90%"></div>
+              <div class="w3-round-xlarge w3-yellow" style="height:24px;width:95%"></div>
             </div>
             <p>Espanhol</p>
             <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-indigo" style="height:24px;width:25%"></div>
+              <div class="w3-round-xlarge w3-yellow" style="height:24px;width:25%"></div>
             </div>
             <p>Japônes</p>
             <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-indigo" style="height:24px;width:20%"></div>
+              <div class="w3-round-xlarge w3-yellow" style="height:24px;width:10%"></div>
             </div>
             <br>
           </div>
@@ -115,7 +115,7 @@
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
-              class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
+              class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge .w3-text-yellow"></i>Sobre</h2>
           <p>Sempre gostei da área da computação desde a infância, isso foi o que me levou a escolher a área da ciência
             da computação, no qual eu me encontrei como programador. Após 4 anos aprimorando meu conhecimento através de
             experiências tanto com os estágios, quanto com a faculdade e cursos. Atuei como desenvolvedor Front-End
@@ -127,12 +127,12 @@
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
+            <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge .w3-text-yellow"></i>Experiências
           </h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Cria Max</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2023 - <span
-                class="w3-tag w3-indigo w3-round">Atual</span></h6>
+            <h6 class=".w3-text-yellow"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2023 - <span
+                class="w3-tag w3-yellow w3-round">Atual</span></h6>
             <p>Desenvolvimento de automações usando o zapier e callbell, desenvolvimento de temas de e-commerce
               utilizando Liquid + TailWindCSS, desenvolvimento de aplicações web usando Angular, Javascript, TypeScript,
               HTML5,
@@ -140,7 +140,7 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Techno Ok</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2022 - Junlho 2022
+            <h6 class=".w3-text-yellow"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2022 - Junlho 2022
             </h6>
             <p>Desenvolvimento de aplicações Web, utilizando Angular, Javascript, PHP, HTML5, CSS3, GIT e Postman.
               Testes de controle de qualidade tanto em aplicação WEB (Angular e Postman) quanto na aplicação mobile
@@ -149,7 +149,7 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Compass UOL</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2022 - Abril 2022
+            <h6 class=".w3-text-yellow"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2022 - Abril 2022
             </h6>
             <p>Desenvolvimento de APIs em Java com JPA, Spring Boot, JBoss, Postman, GIT, MySQL, OracleSQL, Metodologias
               Ágeis e Scrum.
@@ -159,12 +159,12 @@
 
         <div class="w3-container w3-card w3-white">
           <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Educação
+            <i class="fa fa-regular fa-book fa-fw w3-margin-right w3-xxlarge .w3-text-yellow"></i>Educação
           </h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Digital Inovation One ( DIO )
               </b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2018 - Dezembro 2021
+            <h6 class=".w3-text-yellow"><i class="fa fa-graduation-cap fa-fw w3-margin-right"></i>Plataforma de Estudos
             </h6>
             <p>
               Maior plataforma de educação aberta em TI da América Latina, nesse contexto, seguem meus principais
@@ -184,14 +184,14 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Universidade Mauricio de Nassau (UNINASSAU)</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2018 - Agosto 2023
+            <h6 class=".w3-text-yellow"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2018 - Agosto 2021
             </h6>
             <p>Bacharelado em Ciência da Computação na faculdade Mauricio de Nassau, focado em desenvolvimento
               Fullstack.</p>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Cultura Inglesa</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril 2011 - Agosto 2019
+            <h6 class=".w3-text-yellow"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril 2011 - Agosto 2019
             </h6>
             <p>Curso de Inglês - Atingindo a Fluência e em breve pretendo participar da prova de Cambridge.</p>
           </div>
@@ -199,10 +199,10 @@
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Projetos
+            <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge .w3-text-yellow"></i>Projetos
           </h2>
           <div class="w3-container">
-            <h6 class="w3-text-indigo">
+            <h6 class=".w3-text-yellow">
               <i class="fa fa-github fa-fw w3-margin-right"></i>
               <a href="https://github.com/Carlos-Shinra-Neto/Projeto_BuzzFeedAnime"
                 target="_blank">Carlos-Shinra-Neto/Projeto_BuzzFeedAnime</a>
@@ -213,7 +213,7 @@
             <hr>
           </div>
           <div class="w3-container">
-            <h6 class="w3-text-indigo">
+            <h6 class=".w3-text-yellow">
               <i class="fa fa-github fa-fw w3-margin-right"></i>
               <a href="https://github.com/Carlos-Shinra-Neto/angular-pokedex"
                 target="_blank">Carlos-Shinra-Neto/angular-pokedex
@@ -223,7 +223,7 @@
           </div>
         </div>
         <div class="w3-container">
-          <h6 class="w3-text-indigo">
+          <h6 class=".w3-text-yellow">
             <i class="fa fa-github fa-fw w3-margin-right"></i>
             <a href="https://github.com/Carlos-Shinra-Neto/Chess-System---Java/tree/master"
               target="_blank">Carlos-Shinra-Neto/Chess-System---Java
@@ -241,7 +241,7 @@
     <!-- End Page Container -->
   </div>
 
-  <footer class="w3-container w3-indigo w3-center w3-margin-top">
+  <footer class="w3-container w3-yellow w3-center w3-margin-top">
     <p>Minhas Redes Sociais</p>
     <a href="https://github.com/Carlos-Shinra-Neto" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
     <a href="din.com/in/carlos-neto-b49102194/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
