Alteração de Cores dos Icones

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             <h2>Carlos Correia de A. Neto</h2>
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large .w3-text-yellow"></i>Desenvolvedor FullStack</p>
-            <p><i class="fa fa-home fa-fw w3-margin-right w3-large .w3-text-yellow"></i>Recife - PE, Brasil</p>
-            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large .w3-text-yellow"></i>carloscaneto00@gmail.com</p>
-            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large .w3-text-yellow"></i>(81) 9 9303-7373</p>
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large " style="color: #ffef37;"></i>Desenvolvedor FullStack</p>
+            <p><i class="fa fa-home fa-fw w3-margin-right w3-large " style="color: #ffef37;"></i>Recife - PE, Brasil</p>
+            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large " style="color: #ffef37;"></i>carloscaneto00@gmail.com</p>
+            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large " style="color: #ffef37;"></i>(81) 9 9303-7373</p>
             <hr>
 
             <p class="w3-large">
-              <b><i class="fa fa-asterisk fa-fw w3-margin-right .w3-text-yellow"></i>Habilidades</b>
+              <b><i class="fa fa-asterisk fa-fw w3-margin-right " style="color: #ffef37;"></i>Habilidades</b>
             </p>
             <p>Angular</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -85,7 +85,7 @@
             <br>
 
             <p class="w3-large w3-text-theme">
-              <b><i class="fa fa-globe fa-fw w3-margin-right .w3-text-yellow"></i>Idiomas</b>
+              <b><i class="fa fa-globe fa-fw w3-margin-right " style="color: #ffef37;"></i>Idiomas</b>
             </p>
             <p>Português</p>
             <div class="w3-light-grey w3-round-xlarge">
@@ -115,7 +115,7 @@
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
-              class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge .w3-text-yellow"></i>Sobre</h2>
+              class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge " style="color: #ffef37;"></i>Sobre</h2>
           <p>Sempre gostei da área da computação desde a infância, isso foi o que me levou a escolher a área da ciência
             da computação, no qual eu me encontrei como programador. Após 4 anos aprimorando meu conhecimento através de
             experiências tanto com os estágios, quanto com a faculdade e cursos. Atuei como desenvolvedor Front-End
@@ -127,11 +127,11 @@
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge .w3-text-yellow"></i>Experiências
+            <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge " style="color: #ffef37;"></i>Experiências
           </h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Cria Max</b></h5>
-            <h6 class=".w3-text-yellow"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2023 - <span
+            <h6 class="" style="color: #ffef37;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2023 - <span
                 class="w3-tag w3-yellow w3-round">Atual</span></h6>
             <p>Desenvolvimento de automações usando o zapier e callbell, desenvolvimento de temas de e-commerce
               utilizando Liquid + TailWindCSS, desenvolvimento de aplicações web usando Angular, Javascript, TypeScript,
@@ -140,7 +140,7 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Techno Ok</b></h5>
-            <h6 class=".w3-text-yellow"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2022 - Junlho 2022
+            <h6 class="" style="color: #ffef37;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2022 - Junlho 2022
             </h6>
             <p>Desenvolvimento de aplicações Web, utilizando Angular, Javascript, PHP, HTML5, CSS3, GIT e Postman.
               Testes de controle de qualidade tanto em aplicação WEB (Angular e Postman) quanto na aplicação mobile
@@ -149,7 +149,7 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Compass UOL</b></h5>
-            <h6 class=".w3-text-yellow"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2022 - Abril 2022
+            <h6 class="" style="color: #ffef37;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2022 - Abril 2022
             </h6>
             <p>Desenvolvimento de APIs em Java com JPA, Spring Boot, JBoss, Postman, GIT, MySQL, OracleSQL, Metodologias
               Ágeis e Scrum.
@@ -159,12 +159,12 @@
 
         <div class="w3-container w3-card w3-white">
           <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-regular fa-book fa-fw w3-margin-right w3-xxlarge .w3-text-yellow"></i>Educação
+            <i class="fa fa-regular fa-book fa-fw w3-margin-right w3-xxlarge " style="color: #ffef37;"></i>Educação
           </h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Digital Inovation One ( DIO )
               </b></h5>
-            <h6 class=".w3-text-yellow"><i class="fa fa-graduation-cap fa-fw w3-margin-right"></i>Plataforma de Estudos
+            <h6 class="" style="color: #ffef37;"><i class="fa fa-graduation-cap fa-fw w3-margin-right"></i>Plataforma de Estudos
             </h6>
             <p>
               Maior plataforma de educação aberta em TI da América Latina, nesse contexto, seguem meus principais
@@ -184,14 +184,14 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Universidade Mauricio de Nassau (UNINASSAU)</b></h5>
-            <h6 class=".w3-text-yellow"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2018 - Agosto 2021
+            <h6 class="" style="color: #ffef37;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2018 - Agosto 2021
             </h6>
             <p>Bacharelado em Ciência da Computação na faculdade Mauricio de Nassau, focado em desenvolvimento
               Fullstack.</p>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Cultura Inglesa</b></h5>
-            <h6 class=".w3-text-yellow"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril 2011 - Agosto 2019
+            <h6 class="" style="color: #ffef37;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril 2011 - Agosto 2019
             </h6>
             <p>Curso de Inglês - Atingindo a Fluência e em breve pretendo participar da prova de Cambridge.</p>
           </div>
@@ -199,10 +199,10 @@
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge .w3-text-yellow"></i>Projetos
+            <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge " style="color: #ffef37;"></i>Projetos
           </h2>
           <div class="w3-container">
-            <h6 class=".w3-text-yellow">
+            <h6 class="" style="color: #ffef37;">
               <i class="fa fa-github fa-fw w3-margin-right"></i>
               <a href="https://github.com/Carlos-Shinra-Neto/Projeto_BuzzFeedAnime"
                 target="_blank">Carlos-Shinra-Neto/Projeto_BuzzFeedAnime</a>
@@ -213,7 +213,7 @@
             <hr>
           </div>
           <div class="w3-container">
-            <h6 class=".w3-text-yellow">
+            <h6 class="" style="color: #ffef37;">
               <i class="fa fa-github fa-fw w3-margin-right"></i>
               <a href="https://github.com/Carlos-Shinra-Neto/angular-pokedex"
                 target="_blank">Carlos-Shinra-Neto/angular-pokedex
@@ -223,7 +223,7 @@
           </div>
         </div>
         <div class="w3-container">
-          <h6 class=".w3-text-yellow">
+          <h6 class="" style="color: #ffef37;">
             <i class="fa fa-github fa-fw w3-margin-right"></i>
             <a href="https://github.com/Carlos-Shinra-Neto/Chess-System---Java/tree/master"
               target="_blank">Carlos-Shinra-Neto/Chess-System---Java
